# bevy_game_template

./: Cargo.toml  README.md  index.html  sokoban-11b66903db0e2c8.js  sokoban-926d25ffd438a4a3.js  sokoban-eabc0715fc7d1d3a.js
.github/workflows/: build.yml  deploy.yml  release-android-google-play.yaml  release-flow.yaml  release-ios-testflight.yaml  release.yaml  release.yml
credits/: CREDITS.md
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: main.rs  menu.rs
src/systems/: level.rs
